--- a/blackjack_kin.ipynb
+++ b/blackjack_kin.ipynb
@@ -2,15 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def revealdealer():\n",
+    "    if len(dealerhand) == 2:\n",
+    "        return dealerhand[0]\n",
+    "    elif len(dealerhand) >2:\n",
+    "        return dealerhand[0], dealerhand[1]"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.3 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.3"
   },
   "orig_nbformat": 4
  },
